# gltests

./: .gitignore  CMakeLists.txt  README.md  gltests.kdev4
.kdev4/: gltests.kdev4
assets/: cube.mtl  cubecontainer.blend  cubecontainer.blend1  passthrough.frag  passthrough.vert  screenshader.frag  screenshader.vert
cmake/: FindGLFW.cmake
motor/: camera.cpp  camera.h  engine.cpp  engine.h  game.cpp  game.h  mesh.cpp  mesh.h  model.cpp  model.h  resource.cpp  resource.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  stb_image.h  transform.h  vertex.h
mygame/: mygame.cpp  mygame.h
src/: camera.cpp  camera.h  game.cpp  game.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h  transform.cpp  vertex.cpp
